--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,12 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+    <dependency>
+      <groupId>org.mybatis</groupId>
+      <artifactId>mybatis</artifactId>
+      <version>3.5.3</version>
+  </dependency>
+
 	</dependencies>
 
 	<build>
