--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 
 	<properties>
 		<java.version>1.8</java.version>
+    <skipTests>true</skipTests>
 	</properties>
 
 	<dependencies>
@@ -64,14 +65,6 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
-      <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-failsafe-plugin</artifactId>
-          <version>3.0.0-M4</version>
-          <configuration>
-              <skipITs>true</skipITs>
-          </configuration>
-      </plugin>
 		</plugins>
 	</build>
 
